--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-tsparticles": "^2.10.1",
     "tailwind-merge": "^1.13.1",
     "tailwindcss-animate": "^1.0.5",
-    "tsparticles": "^2.10.1"
+    "tsparticles": "^2.10.1",
+    "xml2js": "^0.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
