--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.4.0",
+    "axios-jsonp": "^1.0.4",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cors-anywhere": "^0.4.4",
